# rejoin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.toml  pyproject.toml  requirements.txt  run-tui.sh  run.sh
.github/workflows/: ci.yml
docs/: TUTORIAL.md  demo.tape
rejoin/: app.py  common.py  config.py  db.py  external.py  hermes.py  indexer.py  resume.py  titler.py  transcript.py  tui.py  tui.tcss
rejoin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
rejoin/static/: app.js  style.css
rejoin/templates/: _detail.html
session_dash/: app.py  config.py  indexer.py  resume.py  titler.py  transcript.py  tui.py
static/: app.js  style.css
templates/: _detail.html  _sessions.html  index.html
tests/: test_common.py  test_db.py  test_hermes.py  test_indexer.py  test_resume.py  test_titler.py
