[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rejoin"
version = "0.1.0"
description = "Local dashboard for browsing and rejoining AI coding-agent sessions (Claude Code, Codex, OpenCode, Pi)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Brian Akaka" }]
keywords = ["claude-code", "codex", "opencode", "tmux", "dashboard", "tui", "agent-sessions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Terminals",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "textual>=0.60",
    "agent-sessions>=0.2,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[project.scripts]
rejoin = "rejoin.app:main"
rejoin-tui = "rejoin.tui:main"

[project.urls]
Homepage = "https://github.com/brianakaka7debug/rejoin"
Issues = "https://github.com/brianakaka7debug/rejoin/issues"
Repository = "https://github.com/brianakaka7debug/rejoin"

[tool.setuptools.packages.find]
include = ["rejoin*"]

[tool.setuptools.package-data]
rejoin = ["*.tcss", "templates/*.html", "static/*.css", "static/*.js"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length handled above; rare long lines are fine

[tool.pytest.ini_options]
testpaths = ["tests"]
